syntax="proto3";

package proto;

option go_package = "cchoice/pb";

message ValidateTokenRequest {
   string token = 1;
   string aud = 2;
}

message ValidateTokenResponse {
   string user_id = 1;
   string token_string = 2;
}

message AuthenticateRequest {
   string username = 1;
   string password = 2;
}

message AuthenticateResponse {
   string token = 1;
   bool need_otp = 2;
}

service AuthService {
   rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
   rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
}
