syntax="proto3";

package proto;

import "proto/common.proto";

option go_package = "cchoice/pb";

message EnrollOTPRequest {
   string user_id = 1;
   string issuer = 2;
   string account_name = 3;
}

message EnrollOTPResponse {
   string secret = 1;
   string recovery_codes = 2;
   bytes image = 3;
}

message GenerateOTPCodeRequest {
   OTPMethod.OTPMethod method = 1;
   string user_id = 2;
}

message GenerateOTPCodeResponse {
}

message FinishOTPEnrollmentRequest {
   string user_id = 1;
   string passcode = 2;
}

message FinishOTPEnrollmentResponse {
}

message GetOTPInfoRequest {
   string user_id = 1;
   string otp_method = 2;
}

message GetOTPInfoResponse {
   string recipient = 1;
}

message ValidateOTPRequest {
   string passcode = 1;
   string user_id = 2;
}

message ValidateOTPResponse {
   bool valid = 1;
}

service OTPService {
   rpc GetOTPInfo(GetOTPInfoRequest) returns (GetOTPInfoResponse) {}
   rpc EnrollOTP(EnrollOTPRequest) returns (EnrollOTPResponse) {}
   rpc GenerateOTPCode(GenerateOTPCodeRequest) returns (GenerateOTPCodeResponse) {}
   rpc FinishOTPEnrollment(FinishOTPEnrollmentRequest) returns (FinishOTPEnrollmentResponse) {}
   rpc ValidateOTP(ValidateOTPRequest) returns (ValidateOTPResponse) {}
}
